--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
+ <!-- 21 Days challenge glory jemimah stephen victory james seyi victor jumoke vincent  -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>   
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
